Create index page to MODULO CONTABILIDAD.

--- a/SISTEMEMPRESA/Views/Shared/_Layout.cshtml
+++ b/SISTEMEMPRESA/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("MODCONTABILIDAD", "Index", "ModContabilidad")</li>
                     <li>@Html.ActionLink("DEPARTAMENTO", "Index", "SEGDEPARTAMENTOes")</li>
                     <li>@Html.ActionLink("ROL", "Index", "SEGROLs")</li>
                     <li>@Html.ActionLink("USUARIO DEL SISTEMA", "Index", "SEGUSUARIOSISTEMAs")</li>
